# GLM4-QA

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
api/: __init__.py  client.py  utils.py
